projects/composablekernel/rocm_ck/tests/compile_fail/block_waves_negative.cpp
// Copyright (c) Advanced Micro Devices, Inc., or its affiliates.
// SPDX-License-Identifier: MIT
//
// Must fail: block_waves.k is zero.
// Expected error: "block_waves dimensions must be positive"

#include <rocm_ck/gemm_spec.hpp>

using namespace rocm_ck;

constexpr auto bad = makeSpec(
    Signature{.dtype = DataType::FP16, .ops = {GemmOp{.lhs = "A", .rhs = "B", .out = "C"}}},
    GemmAlgorithm{{128, 128, 32}, {2, 2, 0}, {16, 16, 16}},
    TargetSet::cdna());
